@@ -4,7 +4,7 @@ httplib2
 A caching http interface that supports ETags and gzip
 to conserve bandwidth. 
 
-Requires Python 2.4 or later
+Requires Python 2.3 or later
 
 """
 
@@ -30,6 +30,23 @@ import time
 import random
 import sha
 from gettext import gettext as _
+
+# Python 2.3 support
+if 'sorted' not in __builtins__:
+    def sorted(seq):
+        seq.sort()
+        return seq
+
+# Python 2.3 support
+def HTTPResponse__getheaders(self):
+    """Return list of (header, value) tuples."""
+    if self.msg is None:
+        print "================================"
+        raise httplib.ResponseNotReady()
+    return self.msg.items()
+
+if not hasattr(httplib.HTTPResponse, 'getheaders'):
+    httplib.HTTPResponse.getheaders = HTTPResponse__getheaders
 
 # All exceptions raised here derive from HttpLib2Error
 class HttpLib2Error(Exception): pass
